# t-music-bot-rpc

./: .gitignore  Cargo.toml  LICENSE  README.md  build.js  config.default.json  declarations.d.ts  index.js  index.ts  package.json  patch-exe.js  sea-config.json  settings.default.json  tsconfig.json  with_auth.js
.github/workflows/: release.yml
handlers/: rpc.ts  server.ts  visualizer.ts
lib/: logger.ts  tray.ts  ui.ts
src/: config.rs  config.rs.bak  gui.html  gui.html.bak  main.rs  rpc.rs  rpc.rs.bak  server.rs  server.rs.backup_pre_obs_refactor  server.rs.bak  setup.html  tray.rs  utils.rs
src/visualizer/: capture.rs  mod.rs  processor.rs  processor.rs.bak
utils/: constants.ts
